Fixed wrong placeholder size on small screens

--- a/src/page/components/interactive-image.module.css
+++ b/src/page/components/interactive-image.module.css
@@ -32,6 +32,9 @@
 	grid-row-start: 1;
 	grid-column-start: 1;
 }
+.placeholder {
+	max-width: min(70vw, 500px);
+}
 .placeholder.hidden {
 	visibility: hidden;
 	opacity: 0;
